Fixed a problem where images were displayed distorted in the carousel widget in ie11.

--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -148,6 +148,15 @@
     }
 }
 
+/* Compatibility for IE */
+html.ie {
+    /* display with optimal aspect ratio */
+    .widget-image-carousel .widget-inner .carousel-item .img-cover {
+        min-height: auto;
+        min-width: auto;
+    }
+}
+
 @include widget-carousel-variant('.widget-primary', $brand-primary);
 @include widget-carousel-variant('.widget-secondary', $brand-secondary);
 @include widget-carousel-variant('.widget-success', $brand-success);
